--- a/Style css/Style.css
+++ b/Style css/Style.css
@@ -7,13 +7,16 @@
 
 
 /*GENERICS*/
+html{
+    overflow-y: hidden;
+}
 body{
     font-family: 'Rubik Mono One', sans-serif;
 }
 
 h1{
     font-size: 90px;
-    text-align: center;
+    
 }
 
 .text-color-yellow{
@@ -42,18 +45,18 @@ h1{
 
 /*UTILS*/
 .container{
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
-    border: 1px solid;
 }
 .full-page{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    flex-direction: column;
-    align-items: center;
     height: 100vh;
     border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -70,7 +73,6 @@ h1{
 
 
 .text-contenitore{
-    width: 750px;
 }
 
 /*MENU NAV*/
@@ -78,32 +80,37 @@ h1{
 nav{
 
 }
+
 .menu{
-    width: 200px;
-    height: 70px;
-    border: 1px solid;
+    
     position: fixed ;
+    right: 50px;
+    top: 50px;
+    translate: 0 50%;
 
 }
+
+.menu ul{
+    list-style-type: none;
+}
+
+
 .menu a{
     color: black;
     background-color: white;
     font-size: 16px;
     font-weight: bold;
     text-decoration: none;
-    text-align: center;
+    
 
-    height: 30px;
-    width: 30px;
+    height: 40px;
+    width: 40px;
     border-radius: 50%;
     display: inline-block;
 
     text-align: center;
     line-height: 40px;
 
+    margin: 10px 0;
 }
 
-.menu ul{
-    list-style: none;
-
-}
