--- a/Style css/Style.css
+++ b/Style css/Style.css
@@ -11,7 +11,7 @@ html{
     overflow-y: hidden;
 }
 body{
-    font-family: 'Rubik Mono One', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 h1{
